--- a/Login-Register/nav-style.css
+++ b/Login-Register/nav-style.css
@@ -7,6 +7,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 2;
 }
 
 .navigation {
@@ -33,6 +34,10 @@ ul a {
     text-decoration: none;
     color: rgba(255, 255, 255, .6);
     letter-spacing: .08rem;
+}
+
+.navigation a:hover {
+    color: rgba(255, 255, 255, 1);
 }
 
 .logo h1 {
