--- a/Login-Register/styling/style.css
+++ b/Login-Register/styling/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap');
 
 * {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -116,7 +117,7 @@ input[type=password]:focus + label {
 }
 
 .form__field:placeholder-shown ~ .form__label {
-    font-size: 1.3rem;
+    font-size: 1rem;
     cursor: text;
     top: 20px;
 }
@@ -128,7 +129,7 @@ input[type=password]:focus + label {
     top: 0;
     display: block;
     transition: 0.2s;
-    font-size: 1rem;
+    font-size: .8rem;
     color: #000000;
 }
 
@@ -136,7 +137,7 @@ input[type=password]:focus + label {
     position: absolute;
     top: 0;
     display: block;
-    font-size: 1rem;
+    font-size: .8rem;
     color: #000000;
     transition: 0.2s;
     font-weight: 200;    
@@ -179,4 +180,5 @@ form p {
 
 form p span a {
     text-decoration: none;
+    font-weight: 600;
 }
