--- a/Login-Register/styling/dropdown-style.css
+++ b/Login-Register/styling/dropdown-style.css
@@ -9,12 +9,12 @@ label[for=layanan], label[for=fasilitas] {
     display: none;
 }
 
-.fasilitas-check:hover, .layanan-check:hover {
+.fasilitas__check:hover, .layanan__check:hover {
     cursor: pointer;
     color: white;
 }
 
-ul.fasilitas-dropdown, ul.layanan-dropdown {
+ul.fasilitas__dropdown, ul.layanan__dropdown {
     background-color: rgba(255, 255, 255, .4);
     border-radius: .5rem;
     backdrop-filter: blur(.5rem);
@@ -31,60 +31,60 @@ ul.fasilitas-dropdown, ul.layanan-dropdown {
     position: fixed;
 }
 
-ul.layanan-dropdown {
+ul.layanan__dropdown {
     margin-top: -1rem;
     width: 9rem;
     height: 8rem;
     padding-bottom: 1.3rem;
 }
 
-ul.fasilitas-dropdown {
+ul.fasilitas__dropdown {
     right: 13.2rem;
 }
 
-ul.layanan-dropdown {
+ul.layanan__dropdown {
     right: 3.5rem;
 }
 
-ul.fasilitas-dropdown li, 
-ul.layanan-dropdown li {
+ul.fasilitas__dropdown li, 
+ul.layanan__dropdown li {
     text-align: center;
 }
 
 
 /* ====== Drop-Down . TOLONG JANGAN DIAPA-APAIN ====== */
 
-/* #fasilitas:checked ~ ul.fasilitas-dropdown,
-#layanan:checked ~ ul.layanan-dropdown {
+/* #fasilitas:checked ~ ul.fasilitas__dropdown,
+#layanan:checked ~ ul.layanan__dropdown {
     top: -10%;
 } */
 
 /* CHECKED */
-#fasilitas:checked ~ ul.fasilitas-dropdown {
+#fasilitas:checked ~ ul.fasilitas__dropdown {
     top: 3.8rem;
     animation: dropdown .3s ease-in-out forwards;
 }
-#layanan:checked ~ ul.layanan-dropdown {
+#layanan:checked ~ ul.layanan__dropdown {
     top: 5.8rem;
     animation: dropdown .3s ease-in-out forwards;
 }
 
 /* UNCHECKED */
-#layanan:not(:checked) ~ ul.layanan-dropdown,
-#fasilitas:not(:checked) ~ ul.fasilitas-dropdown {
+#layanan:not(:checked) ~ ul.layanan__dropdown,
+#fasilitas:not(:checked) ~ ul.fasilitas__dropdown {
     opacity: 0.4;
     transition: .3s ease-in-out;
     top: -20%;
 }
 
 /* Arrow-Down */
-#fasilitas:checked + label.fasilitas-check > i,
-#layanan:checked + label.layanan-check > i {
+#fasilitas:checked + label.fasilitas__check > i,
+#layanan:checked + label.layanan__check > i {
     transition: .5s;
     transform: rotateZ(180deg);
 }
-#fasilitas:not(:checked) + label.fasilitas-check > i,
-#layanan:not(checked) + label.layanan-check > i {
+#fasilitas:not(:checked) + label.fasilitas__check > i,
+#layanan:not(checked) + label.layanan__check > i {
     transition: .5s;
     transform: rotateZ(0deg);
 }
