--- a/Dashboard-Administrator/styling/nav-style.css
+++ b/Dashboard-Administrator/styling/nav-style.css
@@ -4,6 +4,9 @@ nav {
     justify-content: space-between;
     align-items: center;
     position: fixed !important;
+    width: 100%;
+    padding: 0 5%;
+    z-index: 2;
     background-color: white;
 }
 
