--- a/Dashboard-Administrator/styling/manajemen-style.css
+++ b/Dashboard-Administrator/styling/manajemen-style.css
@@ -42,10 +42,6 @@
 
 /* TABEL STYLING */
 
-.berita {
-    resize: both;
-}
-
 .berita th:nth-child(1) {
     width: 9rem;
 }
@@ -64,4 +60,24 @@
 
 .berita td {
     border-bottom: 2px solid var(--main-grey);
+}
+
+td.action__berita {
+    text-align: center;
+}
+
+td.action__berita a {
+    text-decoration: none;
+    padding: .5rem 1.5rem;
+    color: white;
+    border-radius: .5rem;
+    font-weight: 600;
+}
+
+td.action__berita a:nth-child(1) {
+    background-color: var(--main-blue);
+}
+
+td.action__berita a:nth-child(2) {
+    background-color: var(--main-red);
 }
