--- a/Dashboard-Dokter/styling/nav-style.css
+++ b/Dashboard-Dokter/styling/nav-style.css
@@ -1,7 +1,68 @@
 nav {
+    height: 8rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed !important;
+    inset: 0 0 0 0;
+    padding: 0 5%;
+    z-index: 2;
     background-color: white;
+}
+
+.logo h1 {
+    font-family: 'Carrois Gothic SC', sans-serif;
+    color: black;
+    font-size: 1.85rem;
+    letter-spacing: .1rem;
+}
+
+h1 span {
+    color: var(--main-blue);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* IMAGE STYLE */
+div.profile {
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+    height: 100%;
+}
+
+div.profile > div.image {
+    display: grid;
+    place-items: center;
+    background-color: var(--main-blue);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 4rem;
+    overflow: hidden;
+}
+
+div.profile h2, div.profile p {
+    font-family: 'Poppins', sans-serif;
+}
+div.profile h2 {
+    font-weight: 800;
+    letter-spacing: .05rem;
+    color: var(--main-blue);
+}
+label i {
+    font-size: 1.3rem;
+    color: var(--black-not-hover);
+}
+
+div.profile > div img {
+    width: 4rem;
+    border-radius: 4rem;
+    overflow: hidden;
+}
+/* END */
+
+hr {
+    position: fixed;
+    top: 8rem;
+    width: 90%;
+    border: 1px solid var(--black-not-hover);
 }
