--- a/Dashboard-Dokter/styling/main-style.css
+++ b/Dashboard-Dokter/styling/main-style.css
@@ -104,6 +104,7 @@ td {
 }
 
 .pagination {
+    margin-top: -2rem; 
     display: flex;
     justify-content: space-between;
 }
@@ -202,6 +203,8 @@ input[type=text] {
     font-size: 2rem;
     font-weight: 700;
     color: var(--black-not-hover);
+    width: 100%;
+    border: none;
 }
 
 .message i {
