--- a/HomePage/styling/style.css
+++ b/HomePage/styling/style.css
@@ -7,6 +7,8 @@
 :root {
     --main-blue: #88CFF9;
     --main-blue-transparent: rgba(136, 207, 249, .4);
+    --main-red: #F06363;
+    --main-red-transparent: rgba(240, 99, 99, .4);
     --secondary-blue: #D4F8F9;
     --main-grey: rgba(0, 0, 0, .05);
     --black-not-hover: rgba(0, 0, 0, .4);
