--- a/HomePage/styling/nav-fasilitas-style.css
+++ b/HomePage/styling/nav-fasilitas-style.css
@@ -80,7 +80,8 @@ a:hover .beranda {
     background-color: var(--main-blue);
     color: white;
     font-weight: 700;
-    width: 8rem;  
+    /* width: 8rem;  */
+    padding: 0 1.5rem;
     font-size: 1.15rem;
     font-family: 'Inter', sans-serif;
     letter-spacing: .01rem;
