--- a/Dashboard-Dokter/styling/update-style.css
+++ b/Dashboard-Dokter/styling/update-style.css
@@ -67,6 +67,7 @@
 }
 
 .save-button{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -98,7 +99,7 @@ input[type=number] {
     font-size: 1.15rem;
     width: 100%;
     height: 4rem;
-    border-radius: 4rem;
+    border-radius: 1rem;
     padding-left: 2rem;
     border: none;
     background-color: var(--main-grey);
@@ -109,12 +110,13 @@ select {
     width: 100%;
     height: 3rem;
     margin-top: 0.6rem;
-    border-radius: 4rem;
+    border-radius: 1rem;
     padding-left: 2rem;
     border: none;
     background-color: var(--main-grey);
 }
 .back {
+    cursor: pointer;
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 2rem;
@@ -131,7 +133,7 @@ select {
     font-size: 1.15rem;
     font-family: 'Inter', sans-serif;
     letter-spacing: .01rem;
-    box-shadow: 0 0 5px 1px var(--main-blue-transparent);
+    box-shadow: 0 0 5px 1px var(--main-red-transparent);
     transition: .3s;
     margin-inline: auto;
     margin-top: 1%;
