--- a/Dashboard-Dokter/styling/chat-style.css
+++ b/Dashboard-Dokter/styling/chat-style.css
@@ -16,10 +16,10 @@ main {
     max-height: 75vh;
 }
 
-#chatAutoRefresh {
+.scroll {
+    overflow-y: scroll;
     height: 100%;
     max-height: calc(100% - 4.5rem);
-    overflow-y: auto;
 }
 
 /* RIGHT COLUMN START */
@@ -93,7 +93,6 @@ main {
 }
 
 div.image {
-    background-color: var(--main-blue);
     width: 9rem;
     height: 9rem;
     border-radius: 9rem;
@@ -114,6 +113,7 @@ div.image img {
     background-color: var(--main-grey);
     width: 100%;
     height: 6rem;
+    cursor: pointer;
 }
 
 .right__col form i {
@@ -128,6 +128,7 @@ div.image img {
     font-weight: 700;
     font-size: 2rem;
     border: none;
+    cursor: pointer;
 }
 
 
